    in the stack trace). (Nikita)
  . Fixed bug #79897 (Promoted constructor params with attribs cause crash).
    (Deus Kane)
  . Fixed bug #79946 (Build fails due to undeclared UINT32_C). (Nikita)
  . Fixed bug #77561 (Shebang line not stripped for non-primary script).
    (Nikita)
  . Fixed bug #79948 (Exit in auto-prepended file does not abort PHP execution).
    (Nikita)

- Date:
  . Fixed bug #60302 (DateTime::createFromFormat should new static(), not new
    self()). (Derick)
  . Implemented FR #79903 (datetime: new format "p", same as "P" but returning
    "Z" for UTC). (gharlan)

- JIT:
  . Fixed bug #79864 (JIT segfault in Symfony OptionsResolver). (Dmitry)
  . Fixed bug #79888 (Incorrect execution with JIT enabled). (Dmitry)

- LDAP:
  . Fixed memory leaks. (ptomulik)

- OCI8:
  . Modernized oci_register_taf_callback() callable argument parsing
    implementation. (girgias)

23 Jul 2020, PHP 8.0.0alpha3

- Core:
  . Fixed bug #79790 ("Illegal offset type" exception during AST evaluation
    not handled properly). (Nikita)
  . Fixed bug #79791 (Assertion failure when unsetting variable during binary
    op). (Nikita)
  . Fixed bug #79841 (Syntax error in configure / unescaped "[]" in php.m4).
    (Nikita)
  . Fixed bug #79828 (Segfault when trying to access non-existing variable).
    (Nikita)
  . Fixed bug #79852 (count(DOMNodeList) doesn't match
    count(IteratorIterator(DOMNodeList))). (Nikita)
  . Fixed bug #79867 (Promoted untyped properties should get null default
    value). (Nikita)

- Standard:
  . Fixed bug #79868 (Sorting with array_unique gives unwanted result). (Nikita)

09 Jul 2020, PHP 8.0.0alpha2

- FFI:
  . Fixed bug #79749 (Converting FFI instances to bool fails). (cmb)

- JIT:
  . Fixed bug #79743 (Fatal error when assigning to array property
    with JIT enabled). (Laruence)

- PCRE:
  . Updated to PCRE2 10.35. (cmb)

25 Jun 2020, PHP 8.0.0alpha1

- Core:
  . Removed the pdo_odbc.db2_instance_name php.ini directive. (Kalle)