@@ -17,6 +17,8 @@ PHP                                                                        NEWS
     (Nikita)
   . Fixed bug #79948 (Exit in auto-prepended file does not abort PHP execution).
     (Nikita)
+  . Fixed bug #65275 (Calling exit() in a shutdown function does not change the
+    exit value in CLI). (Nikita)
 
 - Date:
   . Fixed bug #60302 (DateTime::createFromFormat should new static(), not new
